--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/DisplayMessageUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/DisplayMessageUserControl.xaml
@@ -8,15 +8,15 @@
     <!--d:DesignHeight="450" d:DesignWidth="800"-->
     <Grid x:Name="Success_Message">
         <Rectangle Fill="White" Opacity=".7" MouseDown="Rectangle_MouseDown" />
-        <Border CornerRadius ="8" Background="LightGreen" Height="100" Width="350" BorderBrush="Green" BorderThickness="3">
+        <Border CornerRadius ="8" Background="#FF41A43C" Height="100" Width="350" BorderBrush="LightGreen" BorderThickness="1.5">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" FontWeight="Bold" Foreground="Black"   TextWrapping="Wrap" />
+                <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="White"   TextWrapping="Wrap" />
 
-                <Button Grid.Row="1" HorizontalAlignment="Left" Name="Close_Modal" Background="#f5857d" Foreground="White" Height="20" Width="51" FontSize="10" Padding=" 0 3" Margin="278,13,0,14"
+                <Button Grid.Row="1" HorizontalAlignment="Center" Name="Close_Modal" Background="Red" Foreground="White" Height="20" Width="51" FontSize="10" Padding=" 0 3"
                         Click="Button_Close_Modal">Ok</Button>
             </Grid>
         </Border>
