--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:XelsDesktopWalletApp.Views.Pages.Modals"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
               d:DesignHeight="700" d:DesignWidth="900"
              HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" Initialized="UserControl_Initialized" >
@@ -24,7 +25,7 @@
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Content="Receive" HorizontalAlignment="Center" FontWeight="DemiBold" VerticalAlignment="Center"  VerticalContentAlignment="Center" FontSize="15"
                     RenderTransformOrigin="0.515,-0.184" Margin="0,0,0,0" Width="94" />
-                <Button Click="HidePopup_Click" 
+                <!--<Button Click="HidePopup_Click" 
                         Background="Red" Foreground="White"
                         VerticalAlignment="Top"
                         HorizontalAlignment="Right" Content="X"
@@ -37,7 +38,21 @@
                             <Setter Property="CornerRadius" Value="50"/>
                         </Style>
                     </Button.Resources>
+                </Button>-->
+
+
+
+                <Button Click="HidePopup_Click" 
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Right"
+                        HorizontalContentAlignment="Left"
+                        Background="White" BorderBrush="White">
+
+                    <materialDesign:PackIcon Kind="CloseBold" Foreground="Green" />
                 </Button>
+
+
+
                 <!-- buttons   -->
                 <Button Grid.Row="1" x:Name="XelsButton" Content="XELS" Click="XelsButton_Click"    VerticalAlignment="Top"
                         Background="Green" RenderTransformOrigin="0.174,0.571" Margin="5,5,446,0" Height="32" >
