--- a/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="BelsPage">
 
-    <StackPanel Background="White" >
+    <Grid Background="White" x:Name="Bels_Receive_Page">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -48,6 +48,6 @@
                 <TextBlock Text="You have not imported BELS address yet." FontSize="20" FontWeight="Bold" Margin="-85,0,-165,0" />
             </Border>
         </Grid>
-    </StackPanel>
+    </Grid>
     
 </Page>
