--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="BelsPage">
 
-    <StackPanel Background="White" Margin="100 5">
+    <Grid Background="White" Margin="100 5" x:Name="Bels_Send_Page">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -65,5 +65,5 @@
             </Border>
 
         </Grid>
-    </StackPanel>
+    </Grid>
 </Page>
