--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/MainchainPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/MainchainPage.xaml
@@ -9,141 +9,140 @@
       Title="MainchainPage">
 
     <Grid Background="White" x:Name="Mainchain_Send_Page">
+        <StackPanel>
+            <Grid Margin="100 5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-        <Grid Margin="100 5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
 
+                <!-- input form  -->
+                <Border Grid.Row="0" Margin="0 05 0 0 ">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-            <!-- input form  -->
-            <Border Grid.Row="0" Margin="0 05 0 0 ">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                        <Border Grid.Row="0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                    <Border Grid.Row="0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-
-                            <Border Grid.Row="0">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*" />
-                                        <ColumnDefinition Width=".5*" />
-                                        <ColumnDefinition Width="0.7*" />
-                                        <!--  <ColumnDefinition Width=".5*" />-->
-                                    </Grid.ColumnDefinitions>
-                                    <Border Grid.Column="0">
-                                        <Label Content="Amount"  RenderTransformOrigin="1.158,-0.076" />
-                                    </Border>
-                                    <Border Grid.Column="1">
-                                        <Label Content="Spendable:"  HorizontalAlignment="Right" RenderTransformOrigin="1.158,-0.076" FontWeight="DemiBold"/>
-                                    </Border>
-                                    <Border Grid.Column="2">
-                                        <Label  x:Name="textAvailableCoin" HorizontalAlignment="Left" 
+                                <Border Grid.Row="0">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="2*" />
+                                            <ColumnDefinition Width=".5*" />
+                                            <ColumnDefinition Width="0.7*" />
+                                            <!--  <ColumnDefinition Width=".5*" />-->
+                                        </Grid.ColumnDefinitions>
+                                        <Border Grid.Column="0">
+                                            <Label Content="Amount"  RenderTransformOrigin="1.158,-0.076" />
+                                        </Border>
+                                        <Border Grid.Column="1">
+                                            <Label Content="Spendable:"  HorizontalAlignment="Right" RenderTransformOrigin="1.158,-0.076" FontWeight="DemiBold"/>
+                                        </Border>
+                                        <Border Grid.Column="2">
+                                            <Label  x:Name="textAvailableCoin" HorizontalAlignment="Left" 
                            RenderTransformOrigin="1.158,-0.076" FontWeight="DemiBold"/>
-                                    </Border>
-                                    <!--<Border Grid.Column="3">
+                                        </Border>
+                                        <!--<Border Grid.Column="3">
                                         <Label  Grid.Column="3" x:Name="textCoinType" 
                           />
                                     </Border>-->
-                                </Grid>
-                            </Border>
+                                    </Grid>
+                                </Border>
 
-                            <Border Grid.Row="1">
-                                <!--Amount-->
-                                <TextBox  x:Name="SendAmountText" 
+                                <Border Grid.Row="1">
+                                    <!--Amount-->
+                                    <TextBox  x:Name="SendAmountText" 
                TextChanged="CheckSendAmount_OnChange"/>
-                            </Border>
-                        </Grid>
-                    </Border>
+                                </Border>
+                            </Grid>
+                        </Border>
 
-                    <!--Address-->
-                    <Border Grid.Row="1" Margin="0 5 0 0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+                        <!--Address-->
+                        <Border Grid.Row="1" Margin="0 5 0 0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                            <Label Grid.Row="0" Content="Destination Address" RenderTransformOrigin="1.158,-0.076"/>
+                                <Label Grid.Row="0" Content="Destination Address" RenderTransformOrigin="1.158,-0.076"/>
 
-                            <TextBox Grid.Row="1" x:Name="DestinationAddressText" 
+                                <TextBox Grid.Row="1" x:Name="DestinationAddressText" 
                           TextChanged="CalculateTransactionFee_OnChange"
                         />
-                            <!--Focusable="True" FocusManager.LostFocus="TxtAddress_LostFocus"-->
+                                <!--Focusable="True" FocusManager.LostFocus="TxtAddress_LostFocus"-->
 
-                        </Grid>
-                    </Border>
+                            </Grid>
+                        </Border>
 
-                    <!-- transaction fee-->
-                    <Border Grid.Row="2" Margin=" 0 5 0 0">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+                        <!-- transaction fee-->
+                        <Border Grid.Row="2" Margin=" 0 5 0 0">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                            <Label Grid.Row="0" Content="Transaction fee"  RenderTransformOrigin="1.158,-0.076" />
-                            <TextBox Grid.Row="1"  x:Name="TransactionFeeText" BorderBrush="Green" IsReadOnly="True"  />
-                            <Label Grid.Row="2" x:Name="TransactionFeeTypeLabel"  RenderTransformOrigin="1.158,-0.076" />
-                            <TextBlock x:Name="TransactionWarningLabel" Grid.Row="3" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
-                        </Grid>
-                    </Border>
+                                <Label Grid.Row="0" Content="Transaction fee"  RenderTransformOrigin="1.158,-0.076" />
+                                <TextBox Grid.Row="1"  x:Name="TransactionFeeText" BorderBrush="Green" IsReadOnly="True"  />
+                                <Label Grid.Row="2" x:Name="TransactionFeeTypeLabel"  RenderTransformOrigin="1.158,-0.076" />
+                                <TextBlock x:Name="TransactionWarningLabel" Grid.Row="3" Text="Please enter a valid amount and destination address to calculate the fee" TextWrapping="Wrap"  Foreground="Red" />
+                            </Grid>
+                        </Border>
 
-                    <!--password-->
+                        <!--password-->
 
-                    <Border Grid.Row="3" Margin="0 5 0 5">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
+                        <Border Grid.Row="3" Margin="0 5 0 5">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
 
-                            <Label Grid.Row="0" Content="Wallet Password" />
-                            <PasswordBox Grid.Row="1" x:Name="password" PasswordChar="*"
+                                <Label Grid.Row="0" Content="Wallet Password" />
+                                <PasswordBox Grid.Row="1" x:Name="password" PasswordChar="*"
                              />
-                        </Grid>
-                    </Border>
+                            </Grid>
+                        </Border>
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-            <!-- submit , cancel button -->
-            <Border Grid.Row="1" Margin=" 0 5 0 0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+                <!-- submit , cancel button -->
+                <Border Grid.Row="1" Margin=" 0 5 0 0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
 
-                    <Button x:Name="SendButton" Click="sendButton_Click"  Content="Send" Padding="2" Margin="0,0,5,0"
+                        <Button x:Name="SendButton" Click="sendButton_Click"  Content="Send" Padding="2" Margin="0,0,5,0"
                         Background="Green"
                             Foreground="White" Grid.ColumnSpan="2">
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-        </Grid>
-
-
+            </Grid>
+        </StackPanel>
     </Grid>
 
 </Page>
