Custom modal added on XelsXLCDesktopWalletApp.

--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/DisplayErrorMessageUserControl.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/DisplayErrorMessageUserControl.xaml
@@ -4,10 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:XelsXLCDesktopWalletApp.Views.Pages.Modals"
-             mc:Ignorable="d">
+             mc:Ignorable="d"  BorderThickness="1">
     <Grid >
-        <Rectangle Fill="#FF5B5858" Opacity=".7" MouseDown="Rectangle_MouseDown" />
-        <Border CornerRadius ="10" Background="#f5857d" Height="100" Width="250" BorderBrush="ForestGreen" BorderThickness="1.5" >
+        <Rectangle Fill="DarkGray" Opacity=".7" MouseDown="Rectangle_MouseDown" />
+        <Border CornerRadius ="8" Background="White" Height="100" Width="350" BorderBrush="Red" BorderThickness="1.5" >
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -17,9 +17,9 @@
 
                 <!--<Label Grid.Row="0" Background="Silver" Content="Error Message"  FontSize="20" FontWeight="Bold" Padding=" 5 0 0 3" Width="350" HorizontalContentAlignment="Left" Foreground="Red"  />-->
 
-                <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="White"   TextWrapping="Wrap" />
+                <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#FF251F1F"  TextWrapping="Wrap" />
 
-                <Button Grid.Row="1" HorizontalAlignment="Left" Name="Close_Modal" Background="White" Foreground="Black" Height="20" Width="43" FontSize="10" Padding=" 0 3" Margin="189,14,0,14"
+                <Button Grid.Row="1" HorizontalAlignment="Center" Name="Close_Modal" Background="Red" Foreground="White" Height="20" Width="51" FontSize="10" Padding=" 0 3"
                         Click="Button_Close_Modal">Ok</Button>
             </Grid>
         </Border>
