--- a/src/XelsXLCDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/SendPages/BelsPage.xaml
@@ -8,62 +8,63 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="BelsPage">
 
-    <StackPanel Background="White" Margin="100 5">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <!--Address-->
-            <Border Grid.Row="0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+    <Grid Background="White" Margin="100 5" x:Name="Bels_Send_Page">
+        <StackPanel>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <!--Address-->
+                <Border Grid.Row="0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" FontSize="20" Margin="10,0,0,10" Content="To Address" />
+                        <Label Grid.Row="0" FontSize="20" Margin="10,0,0,10" Content="To Address" />
 
-                    <TextBox Grid.Row="1" x:Name="textToAddress" BorderBrush="#FFC9D6C9" />
+                        <TextBox Grid.Row="1" x:Name="textToAddress" BorderBrush="#FFC9D6C9" />
 
-                </Grid>
-            </Border>
+                    </Grid>
+                </Border>
 
-            <!--Amount-->
-            <Border Grid.Row="1">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                <!--Amount-->
+                <Border Grid.Row="1">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                    <Label Grid.Row="0" FontSize="20" Margin="10,0,0,10" Content="Amount"/>
-                    <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
-                    <TextBlock x:Name="belsHidden" Text="BELS" Visibility="Hidden" />
-                </Grid>
-            </Border>
+                        <Label Grid.Row="0" FontSize="20" Margin="10,0,0,10" Content="Amount"/>
+                        <TextBox Grid.Row="1" x:Name="textAmount"  BorderBrush="#FFC9D6C9"  />
+                        <TextBlock x:Name="belsHidden" Text="BELS" Visibility="Hidden" />
+                    </Grid>
+                </Border>
 
 
-            <Border Grid.Row="2" Margin="0 10">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                   
-                    <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Content="Send Now" Padding="2" 
+                <Border Grid.Row="2" Margin="0 10">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Content="Send Now" Padding="2" 
                         Background="Green"  
                         Foreground="White" Margin="10,0,10,0" >
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="5"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
 
-                </Grid>
-            </Border>
-
-        </Grid>
-    </StackPanel>
+                    </Grid>
+                </Border>
+            </Grid>
+        </StackPanel>
+    </Grid>
 </Page>
