--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Cross-chain Transfer/CrosschainUserControl.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:XelsXLCDesktopWalletApp.Views.Pages.Cross_chain_Transfer"
              mc:Ignorable="d" 
             >
@@ -14,16 +15,25 @@
             <Grid>
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height=".05*" />
+                    <RowDefinition Height=".08*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <Button Grid.Row="0" Click="HidePopup_Click" Background="Red" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Height="15" Width="20"           FontSize="10" Padding="7 0" HorizontalContentAlignment="Left">
+                <!--<Button Grid.Row="0" Click="HidePopup_Click" Background="Red" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Height="15" Width="20"           FontSize="10" Padding="7 0" HorizontalContentAlignment="Left">
 
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="50"/>
                         </Style>
                     </Button.Resources>
+                </Button>-->
+
+                <Button Click="HidePopup_Click" 
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Right"
+                        HorizontalContentAlignment="Left"
+                        Background="White" BorderBrush="White">
+
+                    <materialDesign:PackIcon Kind="CloseBold" Foreground="Green" />
                 </Button>
 
                 <Frame  Grid.Row="1"  x:Name="CrossChainFrame"  NavigationUIVisibility="Hidden" />
