--- a/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/DisplayMessageUserControl.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/Modals/DisplayMessageUserControl.xaml
@@ -11,13 +11,13 @@
         <Border CornerRadius ="8" Background="White" Height="100" Width="350" BorderBrush="Green" BorderThickness="1.5">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="70" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#FF251F1F"   TextWrapping="Wrap" />
+                <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#FF251F1F"   TextWrapping="Wrap" />
 
                 <Button Grid.Row="1" HorizontalAlignment="Center" Name="Close_Modal" Background="Green" Foreground="White" Height="20" Width="51" FontSize="10" Padding=" 0 3"
-                        Click="Button_Close_Modal">Ok</Button>
+                        Click="Button_Close_Modal" Margin="0,0,0,14">Ok</Button>
             </Grid>
         </Border>
 
