Creat or Restore page's back button text color changed

--- a/src/XelsXLCDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -47,7 +47,7 @@
                     <Hyperlink.Style>
                     <Style TargetType="{x:Type Hyperlink}"
                             BasedOn="{StaticResource {x:Type Hyperlink}}">
-                        <Setter Property="Foreground" Value="Blue"/>
+                        <Setter Property="Foreground" Value="Green"/>
                     </Style>
                     </Hyperlink.Style><Run Text="BACK " FontSize="15" FontWeight="SemiBold" />
                 </Hyperlink>
