--- a/src/XelsPCHDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -781,7 +781,7 @@
                 <!--- history  -->
                 <Grid Margin="0 10 0 0">
 
-                    <Border CornerRadius="10" Background="#ffffff" BorderBrush="Black" BorderThickness="1">
+                    <Border CornerRadius="10" Background="#ffffff" BorderBrush="Green" BorderThickness="1">
                         <Border.Effect>
                             <DropShadowEffect  Direction="-75" ShadowDepth="2" Opacity="0.8" BlurRadius="25" Color="Black" />
                         </Border.Effect>
