--- a/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/DisplayErrorMessageUserControl.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/DisplayErrorMessageUserControl.xaml
@@ -7,11 +7,11 @@
              mc:Ignorable="d"  BorderThickness="1">
     <Grid >
         <Rectangle Fill="DarkGray" Opacity=".7" MouseDown="Rectangle_MouseDown" />
-        <Border CornerRadius ="8" Background="White" Height="100" Width="350" BorderBrush="Red" BorderThickness="1.5" >
+        <Border CornerRadius ="8" Background="White" Height="100" Width="350" BorderBrush="Green" BorderThickness="1.5" >
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
+                    <RowDefinition Height="70" />
+                    <RowDefinition Height="Auto" />
                     <!--<RowDefinition Height="*" />-->
                 </Grid.RowDefinitions>
 
@@ -19,8 +19,8 @@
 
                 <TextBlock Grid.Row="0" x:Name="Message_Modal" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" Foreground="#FF251F1F"  TextWrapping="Wrap" />
 
-                <Button Grid.Row="1" HorizontalAlignment="Center" Name="Close_Modal" Background="Red" Foreground="White" Height="20" Width="51" FontSize="10" Padding=" 0 3"
-                        Click="Button_Close_Modal">Ok</Button>
+                <Button Grid.Row="1" HorizontalAlignment="Center" Name="Close_Modal" Background="White" Foreground="Black" BorderBrush="Green" Height="20" Width="51" FontSize="10" Padding=" 0 3"
+                        Click="Button_Close_Modal" Margin="0,0,0,14">Ok</Button>
             </Grid>
         </Border>
 
