--- a/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
+++ b/src/XelsPCHDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:XelsPCHDesktopWalletApp.Views.Pages.Modals"
              mc:Ignorable="d" 
              d:HorizontalAlignment="Stretch" d:VerticalAlignment="Stretch" Initialized="UserControl_Initialized">
@@ -19,14 +20,23 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Content="Send" HorizontalAlignment="Center"  FontSize="20" FontWeight="DemiBold" RenderTransformOrigin="0.515,-0.184" Width="54" Margin="0,-10,0,10" />
-                <Button Click="HidePopup_Click" Background="Red" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Height="15" Width="20"           FontSize="10" Padding="7 0" HorizontalContentAlignment="Left">
+                <!--<Button Click="HidePopup_Click" Background="Red" Foreground="White" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Height="15" Width="20"           FontSize="10" Padding="7 0" HorizontalContentAlignment="Left">
 
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="50"/>
                         </Style>
                     </Button.Resources>
+                </Button>-->
+                <Button Click="HidePopup_Click" 
+                        VerticalAlignment="Top"
+                        HorizontalAlignment="Right"
+                        HorizontalContentAlignment="Left"
+                        Background="White" BorderBrush="White">
+
+                    <materialDesign:PackIcon Kind="CloseBold" Foreground="Green" />
                 </Button>
+
                 <Button  Grid.Row="1" Content="XELS" Click="XELS_Button_Click"  
                         Background="Green" Foreground="White" RenderTransformOrigin="0.174,0.571" 
                         FontWeight="Normal" Margin="10,4,486,14">
