--- a/src/XelsXLCDesktopWalletApp/Views/Pages/ReceivePages/XelsPage.xaml
+++ b/src/XelsXLCDesktopWalletApp/Views/Pages/ReceivePages/XelsPage.xaml
@@ -8,16 +8,16 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="XelsPage">
 
-    <Grid Background="White" Margin="0,0,0,0" x:Name="Xels_Receive_Page">
+    <Grid Background="White" Margin="0,7,0,0" x:Name="Xels_Receive_Page">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <!--- image -->
-            <Border Grid.Row="0" Height="100">
+            <Border Grid.Row="0" Height="150">
                 <Image x:Name="image" />
             </Border>
             <!-- signle address and copy button  -->
@@ -43,17 +43,27 @@
                 </Grid>
             </Border>
 
+            <!---  show all addresses button  -->
+            <Border Grid.Row="2" >
+                <Border x:Name="BackShowAllAddressButton" Margin="0 10">
+                    <Button x:Name="showall" Click="ShowAllAddressButton_Click" HorizontalAlignment="Center" 
+                         FontSize="10" Content="Show All Addresses"
+                           RenderTransformOrigin="0.51,0.144" Background="Green">
+                    </Button>
+                </Border>
+            </Border>
+
             <!-- address list -->
-            <Border Grid.Row="2" Margin="0,0,0,0" >
+            <Border Grid.Row="3" Margin="0,0,0,0" >
 
                 <Grid Margin="0,0,0,0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
                     <Border x:Name="BackSingleAddressButton" Grid.Row="0" Visibility="Hidden"   
-                            HorizontalAlignment="Left" Margin="120,0,0,0" 
+                            HorizontalAlignment="Left" Margin="114,0,0,0" 
                           >
                         <Button  x:Name="backButton" 
                                  Click="BackSingleAddressButton_Click" Content="Back"
@@ -68,7 +78,7 @@
                         </Button>
                     </Border>
                     <Border x:Name="AllAddressList" Grid.Row="1"  Visibility="Hidden"
-                            Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center"  >
+                            Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center"  BorderBrush="Green" BorderThickness="0.5" CornerRadius="3">
                         <!--/Visibility="Hidden"-->
 
                         <TabControl>
@@ -76,7 +86,7 @@
 
                                 <ListView Margin="2,2,2,2" x:Name="UnusedAddressList" 
                                               VerticalContentAlignment="Top"  
-                                             ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="200"   
+                                             ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="170"   
                                               ScrollViewer.CanContentScroll="False">
                                     <ListView.View>
                                         <GridView x:Name="tablist">
@@ -143,15 +153,7 @@
                 </Grid>
             </Border>
 
-            <!---  show all addresses button  -->
-            <Border Grid.Row="03" >
-                <Border x:Name="BackShowAllAddressButton" Margin="0 2">
-                    <Button x:Name="showall" Click="ShowAllAddressButton_Click" HorizontalAlignment="Center" 
-                         FontSize="10" Content="Show All Addresses"
-                           RenderTransformOrigin="0.51,0.144" Background="Green">
-                    </Button>
-                </Border>
-            </Border>
+
 
         </Grid>
     </Grid>
